--- a/src/imageboard/static/imageboard/style.less
+++ b/src/imageboard/static/imageboard/style.less
@@ -689,162 +689,70 @@ a {
 }
 
 
-.reply-form {
+.posting-form {
   width: 100%;
   background: @main-bg;
   color: @main-color;
   padding: 10px 20px;
+  margin: 20px 0;
   border-radius: 0 0 @block-border-radius @block-border-radius;
   .item-shadow;
-  //display: none;
 
-  &__inner {}
-
-  &__form {}
-
-  &__columns {
-    display: flex;
-  }
-
-  &__column {}
-
-  &__column--left {
-    width: 500px;
-    margin-right: 20px;
-  }
-
-  &__column--right {
-    width: 400px;
-  }
-
-  &__line {
-    display: flex;
+  &__inner {
+    max-width: 800px;
+    margin: 0 auto;
   }
 
   &__field {
     display: flex;
     margin: 5px 0;
     width: 100%;
-
-    &--email {
-      display: none;  // honeypot!
-    }
   }
 
-  &__label {
+  label {
     display: block;
     text-align: right;
-    width: 70px;
-    padding-right: 10px;
+    width: 80px;
+    //padding-right: 10px;
+    font-size: inherit;
+    height: 20px;
+    line-height: 16px;
+    padding: 2px 10px 2px 0;
+  }
+
+  input, textarea {
+    font-family: inherit;
     font-size: inherit;
   }
 
-  &__text-input {
+  input[type="text"], textarea {
     padding: 1px 3px;
     border: 1px solid @field-border;
     border-radius: @input-border-radius;
     line-height: 16px;
     background: @field-bg;
     color: @main-color;
-    font-size: inherit;
     margin: 0;
     flex: 1 0 auto;
-    font-family: inherit;
-
-    &--textarea {
-      resize: none;
-      height: 130px;
-      padding: 0px 3px;
-    }
 
     &:focus {
       border-color: @field-focus;
     }
   }
 
-  &__file-block {
-    display: block;
-    margin: 5px 0;
-  }
-
-  &__file-button {}
-
-  &__file-input {
-    display: none;
-  }
-
-  &__captcha-block {
-    margin: 5px 0;
-  }
-
-  &__captcha-line {
-    display: flex;
-    align-items: center;
-  }
-
-  &__captcha-label {
-    display: block;
-    margin-bottom: 5px;
-  }
-
-  &__captcha {
-    display: inline-block;
-    width: 200px;
-    height: 50px;
-    box-shadow: 0 0 0 1px #333;
-    margin-right: 10px;
-  }
-
-  &__file-block {
-    display: flex;
-    flex-wrap: wrap;
-    //height: 25px;
-    //width: 500px;
-  }
-
-  &__file-button {
-    display: inline-block;
-    height: 20px;
-    background: @button-bg;
-    border-radius: @input-border-radius 0 0 @input-border-radius;
-    color: @button-color;
-    padding: 2px 10px;
-    line-height: 16px;
-    cursor: pointer;
-    flex: 0 0 auto;
-
-    //&:hover {
-    //  box-shadow: inset 0 0 0 2px @hovered-element-color;
-    //}
-  }
-
-  &__file-label {
-    flex: 1 0 100%;
-    margin-bottom: 5px;
-  }
-
-  &__file-panel {
-    flex: 1 1 auto;
-    //.ellipsis();
-    padding: 1px 5px;
-    height: 20px;
-    line-height: 16px;
-    border-width: 1px 1px 1px 0;
-    border-style: solid;
-    border-color: @field-border;
-    background: @field-bg;
-    color: @field-color;
-    border-radius: 0 @input-border-radius @input-border-radius 0;
+  textarea {
+    resize: vertical;
+    height: 130px;
   }
 
   &__buttons {
-    border-top: 1px dotted #333;
+    border-top: 1px dotted;
     margin-top: 10px;
     padding-top: 10px;
     text-align: center;
   }
 
-  &__button {
+  &__submit {
     text-align: center;
     display: inline-block;
     color: @button-color;
