--- a/src/imageboard/templates/imageboard/thread_page.html
+++ b/src/imageboard/templates/imageboard/thread_page.html
@@ -7,10 +7,13 @@
 
 {% block header %}
     {% include 'imageboard/parts/header.html' %}
-    {% include 'imageboard/parts/board_header.html' %}
 {% endblock %}
 
 {% block content %}
+    {% include 'imageboard/parts/board_header.html' %}
+
+    {% include 'imageboard/parts/posting_form.html' with form_type='new_post' %}
+
     {% include 'imageboard/parts/thread.html' with posts=thread.posts.all %}
 {% endblock %}
 
