Highlight messages from admin

--- a/src/imageboard/static/imageboard/style.less
+++ b/src/imageboard/static/imageboard/style.less
@@ -455,10 +455,24 @@ a {
   }
 
   &__author {
+    margin-right: 10px;
+
     &--custom {
       font-weight: bold;
     }
-    margin-right: 10px;
+
+    &--admin {
+      font-weight: bold;
+      color: @accent-color;
+
+      &:before {
+        content: '###';
+      }
+
+      &:after {
+        content: '###';
+      }
+    }
   }
 
   &__icons-and-buttons {
