--- a/src/imageboard/templates/imageboard/parts/post.html
+++ b/src/imageboard/templates/imageboard/parts/post.html
@@ -27,8 +27,10 @@
 
             от
 
-            <span class="post__author {% if post.author %}post__author--custom{% endif %}">
-                {% if post.author %}
+            <span class="post__author {% if post.author %}post__author--custom{% endif %} {% if post.created_by %}post__author--admin{% endif %}">
+                {% if post.created_by %}
+                     {{ post.created_by.first_name }} {{ post.created_by.last_name }}
+                {% elif post.author %}
                      {{ post.author }}
                 {% else %}
                     {{ board.default_username }}
