Lock boards and threads

--- a/src/imageboard/static/imageboard/style.less
+++ b/src/imageboard/static/imageboard/style.less
@@ -888,3 +888,15 @@ a {
     font-size: 20px;
   }
 }
+
+.lockdown {
+  padding: 10px 20px;
+  background: @main-bg;
+  color: @error-color;
+  border-radius: @block-border-radius;
+  border: 3px solid @error-color;
+  .item-shadow;
+  font-weight: bold;
+  text-align: center;
+  font-size: 20px;
+}
