--- a/src/imageboard/static/imageboard/style.less
+++ b/src/imageboard/static/imageboard/style.less
@@ -913,6 +913,9 @@ a {
   .item-shadow;
 
   &__header {
+    font-size: 40px;
+    line-height: 40px;
+    font-weight: bold;
     margin-bottom: 10px;
   }
 
@@ -923,6 +926,7 @@ a {
 
   &__title {
     font-size: 20px;
+    font-weight: normal;
   }
 
   &__reason {}
