--- a/src/imageboard/templates/404.html
+++ b/src/imageboard/templates/404.html
@@ -1,12 +1,11 @@
 {% extends 'error_base.html' %}
-{% load error_string %}
 
 {% block code %}404{% endblock %}
 
 {% block title %}Page not found{% endblock %}
 
 {% block message %}
-    {% error_string exception %}
+    {{ exception }}
     <br>
     Путь: {{ request_path }}
 {% endblock %}
