Markup app merged back into Imageboard, post text is now rendered properly with wakaba markup

--- a/src/imageboard/templates/imageboard/parts/post.html
+++ b/src/imageboard/templates/imageboard/parts/post.html
@@ -93,7 +93,7 @@
         {% endif %}
 
         <div class="post__text">
-            {% markup text=post.text board_hid=board.hid thread_hid=thread.hid post_hid=post.hid %}
+            {% markup text=post.text board=board thread=thread post=post %}
         </div>
 
         <div class="post__footer"></div>
