--- a/src/imageboard/templates/imageboard/base.html
+++ b/src/imageboard/templates/imageboard/base.html
@@ -15,6 +15,7 @@
 
     {# Lightbox #}
     <link rel="stylesheet" href="{% static "assets/lightbox/css/lightbox.css" %}">
+    {% block page_style %}{% endblock %}
 </head>
 <body>
     {% block main %}
