--- a/src/imageboard/templates/imageboard/thread_page.html
+++ b/src/imageboard/templates/imageboard/thread_page.html
@@ -12,6 +12,8 @@
 {% block content %}
     {% include 'imageboard/parts/board_header.html' %}
 
+    {% include 'imageboard/parts/rules.html' %}
+
     {% if board.is_locked %}
         {% include 'imageboard/parts/lockdown.html' with type='board' %}
     {% elif thread.is_locked %}
@@ -25,6 +27,10 @@
 
 {% block footer %}
     {% include 'imageboard/parts/footer.html' %}
+{% endblock %}
+
+{% block page_style %}
+    <style>{{ board.custom_style }}</style>
 {% endblock %}
 
 {% block page_script %}
