--- a/src/imageboard/static/imageboard/style.less
+++ b/src/imageboard/static/imageboard/style.less
@@ -869,6 +869,8 @@ a {
   background: @main-bg;
   color: @main-color;
   border-radius: @block-border-radius;
+  display: block;
+  text-decoration: none;
   .item-shadow;
 
   &__title {
