--- a/src/imageboard/static/imageboard/style.less
+++ b/src/imageboard/static/imageboard/style.less
@@ -594,6 +594,12 @@ a {
     margin-bottom: -5px;
   }
 
+  &__replies {
+    font-size: 12px;
+    font-style: italic;
+    margin-top: 20px;
+  }
+
   // Rendered post elements:
 
   p {
