Protect html from too long and too tall posts

--- a/src/imageboard/static/imageboard/style.less
+++ b/src/imageboard/static/imageboard/style.less
@@ -461,6 +461,8 @@ a {
 
   &__body {
     .clearfix;
+    max-height: 400px;
+    overflow-y: auto;
   }
 
   &__hid {
@@ -613,9 +615,9 @@ a {
   }
 
   // Rendered post elements:
-
   p {
     margin: 5px 0;
+    word-wrap: break-word;
   }
 
   blockquote {
