--- a/src/imageboard/static/imageboard/style.less
+++ b/src/imageboard/static/imageboard/style.less
@@ -744,6 +744,7 @@ a {
     display: flex;
     margin: 5px 0;
     width: 100%;
+    align-items: start;
   }
 
   label {
@@ -980,5 +981,15 @@ a {
   ul, ol {
     padding: 0;
     list-style-position: inside;
+  }
+}
+
+
+.captcha-image-widget {
+  display: block;
+  margin-right: 20px;
+
+  &__image {
+    display: block;
   }
 }
