--- a/src/imageboard/templates/imageboard/thread_page.html
+++ b/src/imageboard/templates/imageboard/thread_page.html
@@ -42,9 +42,11 @@
 {% endblock %}
 
 {% block metadata %}
-    <div class="cache-data">
-        Page generated at {{ cache_data.generated_at|date:config.DATE_TIME_FORMAT }}.
-        Board {{ cache_data.board }}.
-        Thread {{ cache_data.thread.hid2hex }} updated at {{ cache_data.updated_at|date:config.DATE_TIME_FORMAT }}.
-    </div>
+    {% if cache_data %}
+        <div class="cache-data">
+            Page generated at {{ cache_data.generated_at|date:config.DATE_TIME_FORMAT }}.
+            Board {{ cache_data.board }}.
+            Thread {{ cache_data.thread.hid2hex }} updated at {{ cache_data.updated_at|date:config.DATE_TIME_FORMAT }}.
+        </div>
+    {% endif %}
 {% endblock %}
