Board page -- block margins fixed

--- a/src/imageboard/static/imageboard/style.less
+++ b/src/imageboard/static/imageboard/style.less
@@ -917,6 +917,7 @@ a {
 }
 
 .lockdown {
+  margin: 20px 0;
   padding: 20px;
   background: @main-bg;
   color: @main-color;
@@ -978,6 +979,7 @@ a {
 
 .rules {
   padding: 10px 20px;
+  margin: 20px 0;
   background: @main-bg;
   color: @main-color;
   border-radius: @block-border-radius;
