--- a/src/imageboard/templates/imageboard/thread_page.html
+++ b/src/imageboard/templates/imageboard/thread_page.html
@@ -23,6 +23,8 @@
     {% endif %}
 
     {% include 'imageboard/parts/thread.html' with posts=thread.other_posts %}
+
+    <div class="popup-container js-popup-container"></div>
 {% endblock %}
 
 {% block footer %}
@@ -35,6 +37,7 @@
 
 {% block page_script %}
     <script defer src="{% static "imageboard/hider.js" %}"></script>
+    <script defer src="{% static "imageboard/ref_popup.js" %}"></script>
 {% endblock %}
 
 {% block js_templates %}
