--- a/src/imageboard/templates/imageboard/parts/post.html
+++ b/src/imageboard/templates/imageboard/parts/post.html
@@ -2,7 +2,7 @@
 {% load markup %}
 
 {% if post.is_deleted %}
-    <div class="post post--deleted" id="post-{{ post.id }}">
+    <div class="post post--deleted js-post" id="post-{{ post.id }}">
         <div class="post__anchor" id="{{ post.hid2hex }}"></div>
 
         <div class="post__deleted-label">
@@ -13,7 +13,7 @@
         </div>
     </div>
 {% else %}
-    <div class="post" id="post-{{ post.id }}" data-id="{{ post.id }}" data-hid="{{ post.hid2hex }}">
+    <div class="post js-post" id="post-{{ post.id }}" data-id="{{ post.id }}" data-hid="{{ post.hid2hex }}">
         <div class="post__anchor" id="{{ post.hid2hex }}"></div>
 
         <div class="post__header">
@@ -50,16 +50,18 @@
                     <i class="post__icon post__icon--sticky icon" title="Тред закреплен">bookmark</i>
                 {% endif %}
 
-                {% if post.is_op %}
-                    <button
-                        class="post__button post__button--toggle icon js-toggle-thread"
-                        data-id="{{ thread.id }}" data-hid="{{ thread.hid2hex }}" title="Скрыть тред"
-                    >close</button>
-                {% else %}
-                    <button
-                        class="post__button post__button--toggle icon js-toggle-post"
-                        data-id="{{ post.id }}" data-hid="{{ post.hid2hex }}" title="Скрыть пост"
-                    >close</button>
+                {% if not is_popup %}
+                    {% if post.is_op %}
+                        <button
+                            class="post__button post__button--toggle icon js-toggle-thread"
+                            data-id="{{ thread.id }}" data-hid="{{ thread.hid2hex }}" title="Скрыть тред"
+                        >close</button>
+                    {% else %}
+                        <button
+                            class="post__button post__button--toggle icon js-toggle-post"
+                            data-id="{{ post.id }}" data-hid="{{ post.hid2hex }}" title="Скрыть пост"
+                        >close</button>
+                    {% endif %}
                 {% endif %}
             </div>
 
@@ -103,9 +105,9 @@
                     Ответы:
                     {% for reply in post.replies %}
                         <a
-                            class="post__reply"
+                            class="post__reply js-ref"
                             href="{{ reply.get_absolute_url }}"
-                        >{{ reply.hid2hex }}</a>{% if not forloop.last %},{% endif %}
+                        >&gt;&gt;{{ reply.hid2hex }}</a>{% if not forloop.last %},{% endif %}
                     {% endfor %}
                 </div>
             {% endif %}
@@ -126,7 +128,7 @@
         <div class="post__footer"></div>
 
 
-        {% if request.user.is_superuser %}
+        {% if not is_popup and request.user.is_superuser %}
             {% if post.is_op %}
                 <a class="post__admin" href="{% url 'admin:imageboard_thread_change' object_id=thread.id %}">T</a>
             {% else %}
