--- a/src/imageboard/templates/imageboard/base.html
+++ b/src/imageboard/templates/imageboard/base.html
@@ -42,12 +42,19 @@
         {% block js_templates %}{% endblock %}
     </div>
 
-    <div id="scripts">
-        <script defer src="{% static "assets/underscore/underscore.js" %}"></script>
-        <script defer src="{% static "assets/jquery/jquery.min.js" %}"></script>
-        <script defer src="{% static "assets/lightbox/js/lightbox.js" %}"></script>
+    <div id="csrf_token">
+        {% csrf_token %}
+    </div>
 
-        <script defer src="{% static "imageboard/main.js" %}"></script>
+    <div id="scripts">
+        <script src="{% static "client_errors/client_errors.js" %}"></script>
+
+        <script src="{% static "assets/underscore/underscore.js" %}"></script>
+        <script src="{% static "assets/jquery/jquery.min.js" %}"></script>
+        <script src="{% static "assets/lightbox/js/lightbox.js" %}"></script>
+
+        <script src="{% static "imageboard/main.js" %}"></script>
+
         {% block page_script %}{% endblock %}
     </div>
 
