Captcha: now asyncronous

--- a/src/imageboard/static/imageboard/style.less
+++ b/src/imageboard/static/imageboard/style.less
@@ -790,7 +790,8 @@ a {
     line-height: 16px;
     background: @field-bg;
     color: @main-color;
-    margin: 0;
+    margin-top: 0;
+    margin-bottom: 0;
     flex: 1 0 auto;
 
     &:focus {
@@ -1007,12 +1008,39 @@ a {
 }
 
 
-.captcha-image-widget {
-  display: block;
-  margin-right: 20px;
+.captcha-widget {
+  display: flex;
+  margin-right: 10px;
+  align-items: center;
 
   &__image {
     display: block;
+    background: transparent;
+    color: transparent;
+    margin-right: 10px;
+    box-shadow: inset 0 0 0 1px @field-border;
+  }
+
+  &__input {
+    margin-right: 10px;
+  }
+
+  &__button {
+    display: inline-block;
+    background: @button-bg;
+    width: 30px;
+    height: 30px;
+    padding: 0;
+    border: 0;
+    line-height: 1px;
+    font-size: 24px;
+    cursor: pointer;
+    border-radius: @input-border-radius;
+    color: @button-color;
+
+    &:hover {
+      box-shadow: inset 0 0 0 2px @accent-color;
+    }
   }
 }
 
