LocalCollection interface moved to separate file

--- a/src/imageboard/templates/imageboard/base.html
+++ b/src/imageboard/templates/imageboard/base.html
@@ -53,6 +53,7 @@
         <script src="{% static "assets/jquery/jquery.min.js" %}"></script>
         <script src="{% static "assets/lightbox/js/lightbox.js" %}"></script>
 
+        <script src="{% static "imageboard/localCollection.js" %}"></script>
         <script src="{% static "imageboard/main.js" %}"></script>
 
         {% block page_script %}{% endblock %}
