--- a/src/imageboard/templates/imageboard/thread_page.html
+++ b/src/imageboard/templates/imageboard/thread_page.html
@@ -38,6 +38,7 @@
 {% block page_script %}
     <script src="{% static "imageboard/hider.js" %}"></script>
     <script src="{% static "imageboard/ref_popup.js" %}"></script>
+    <script src="{% static "imageboard/highlighter.js" %}"></script>
 
     <script src="{% static "captcha/captcha.js" %}"></script>
 {% endblock %}
