Use minified versions of Underscore and Lightbox scripts

--- a/src/imageboard/templates/imageboard/base.html
+++ b/src/imageboard/templates/imageboard/base.html
@@ -49,9 +49,9 @@
     <div id="scripts">
         <script src="{% static "client_errors/client_errors.js" %}"></script>
 
-        <script src="{% static "assets/underscore/underscore.js" %}"></script>
+        <script src="{% static "assets/underscore/underscore-min.js" %}"></script>
         <script src="{% static "assets/jquery/jquery.min.js" %}"></script>
-        <script src="{% static "assets/lightbox/js/lightbox.js" %}"></script>
+        <script src="{% static "assets/lightbox/js/lightbox.min.js" %}"></script>
 
         <script src="{% static "imageboard/localCollection.js" %}"></script>
         <script src="{% static "imageboard/main.js" %}"></script>
