--- a/src/imageboard/static/imageboard/style.less
+++ b/src/imageboard/static/imageboard/style.less
@@ -54,6 +54,32 @@
   text-align: center;
 }
 
+.hid--user {
+  border-radius: 3px 0 0 3px;
+  border-right: none;
+  margin-right: 30px;
+  position: relative;
+}
+
+.hid-icon {
+  font-family: 'Material Icons', 'sans-serif';
+  width: 20px;
+  height: 20px;
+  font-size: 18px;
+  line-height: 18px;
+  display: block;
+  position: absolute;
+  left: 100%;
+  background: @accent-color;
+  //color: @main-bg;
+  border-radius: 0 3px 3px 0;
+  border-width: 1px 1px 1px 0;
+  border-style: solid;
+  box-sizing: border-box;
+  top: -1px;
+  text-align: center;
+}
+
 .clearfix {
   &::after {
     content: "";
@@ -414,6 +440,15 @@ a {
 
   &__hid {
     .hid;
+
+    &[data-user="true"] {
+      .hid--user;
+
+      &:after {
+        .hid-icon;
+        content: 'person';
+      }
+    }
   }
 
   &__skipped {
@@ -482,6 +517,15 @@ a {
 
   &__hid {
     .hid;
+
+    &[data-user="true"] {
+      .hid--user;
+
+      &:after {
+        .hid-icon;
+        content: 'person';
+      }
+    }
   }
 
   &__date {
@@ -714,9 +758,22 @@ a {
   position: relative;
   font-size: 12px;
 
+  //&:hover {
+  //  box-shadow: inset 0 0 0 2px @accent-color, 1px 2px 3px rgba(0,0,0, 0.3);
+  //}
+
   &__hid {
     .hid;
     width: 70px;
+
+    &[data-user="true"] {
+      .hid--user;
+
+      &:after {
+        .hid-icon;
+        content: 'person';
+      }
+    }
   }
 
   &__image {
@@ -906,6 +963,15 @@ a {
 
   &__hid {
     .hid;
+
+    &[data-user="true"] {
+      .hid--user;
+
+      &:after {
+        .hid-icon;
+        content: 'person';
+      }
+    }
   }
 
   &__text {
