--- a/src/imageboard/templates/imageboard/parts/post.html
+++ b/src/imageboard/templates/imageboard/parts/post.html
@@ -6,7 +6,7 @@
         <div class="post__anchor" id="{{ post.hid2hex }}"></div>
 
         <div class="post__deleted-label">
-            <span class="post__hid" >
+            <span class="post__hid js-post-hid" data-id="{{ post.id }}" >
                 {{ post.hid2hex }}
             </span>
             Пост  удален.
@@ -17,9 +17,7 @@
         <div class="post__anchor" id="{{ post.hid2hex }}"></div>
 
         <div class="post__header">
-            <a class="post__hid" href="{{ post.get_absolute_url }}">
-                {{ post.hid2hex }}
-            </a>
+            <a class="post__hid js-post-hid" data-id="{{ post.id }}" >{{ post.hid2hex }}</a>
 
             <span class="post__date">
                 {{ post.created_at|date:config.DATE_TIME_FORMAT }}
