Fixed posting form style

--- a/src/imageboard/static/imageboard/style.less
+++ b/src/imageboard/static/imageboard/style.less
@@ -831,7 +831,7 @@ a {
   color: @main-color;
   padding: 10px 20px;
   margin: 20px 0;
-  border-radius: 0 0 @block-border-radius @block-border-radius;
+  border-radius: @block-border-radius;
   .item-shadow;
 
   &__inner {
